force-app/main/default/objects/Case/fields/Claim_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage__c</fullName>
    <description>Warranty claim lifecycle stage</description>
    <label>Claim Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Approved-Pending-Pickup</fullName>
            </value>
            <value>
                <fullName>Pickup Scheduled</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>