force-app/main/default/objects/Case/fields/Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>Defect_Category__c</fullName>
    <description>Structured defect classification captured by the warranty agent</description>
    <label>Defect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>Physical Damage</fullName>
            </value>
            <value>
                <fullName>Missing Parts</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>