force-app/main/default/objects/Case/fields/Pickup_Slot__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Slot__c</fullName>
    <description>Pickup window chosen by the customer via the Apple Messages time picker</description>
    <label>Pickup Slot</label>
    <type>DateTime</type>
</CustomField>