force-app/main/default/objects/Case/recordTypes/Warranty_Claim.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Claim</fullName>
    <active>true</active>
    <businessProcess>Warranty_Claim_Process</businessProcess>
    <description>Warranty claims filed by the WarrantyDesk agent from Apple Messages</description>
    <label>Warranty Claim</label>
</RecordType>