force-app/main/default/objects/Case/listViews/Warranty_Support_Case.listView-meta.xml
<ListView>
    <fullName>Warranty_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty Support</label>
    <queue>Warranty_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>